[package]
name = "requestui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
lazy_static = "1.5.0"
ratatui = "0.30.2"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sled = "0.34.7"
tokio = { version = "1.52.3", features = ["full"] }
