[package]
name = "reqtuitui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
curl-parser = "0.6.0"
lazy_static = "1.5.0"
ratatui = "0.29"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sled = "0.34.7"
tokio = { version = "1.52.3", features = ["full"] }
tui-input = "0.14"
tui-textarea = "0.7.0"
uuid = { version = "1.23.4", features = ["v4"] }
