[package]
name = "reqtuitui"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/planktonsoft/reqtuitui"
homepage = "https://github.com/planktonsoft/reqtuitui"
description = "A terminal UI for making HTTP requests"


[dependencies]
crossterm = "0.28.1"
curl-parser = "0.6.0"
lazy_static = "1.5.0"
ratatui = "0.29"
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sled = "0.34.7"
tokio = { version = "1.52.4", features = ["full"] }
tui-input = "0.14"
tui-textarea = "0.7.0"
uuid = { version = "1.24.0", features = ["v4"] }
arboard = "3"
rhai = { version = "1.25.1", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
